--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -176,21 +176,19 @@
     "# Create slice from data\n",
     "for _, row in tqdm(dataset.iterrows(), total=len(dataset)):\n",
     "    \n",
-    "    # get and load data\n",
+    "    # Load data and GT\n",
     "    id = row.case_id\n",
     "    label = row.label\n",
     "    data, metadata = ReadNRRD(os.path.join(dataset_path, row.data_path.replace('\\\\','/')))\n",
     "    mask, _ = ReadNRRD(os.path.join(dataset_path, row.mask_path.replace('\\\\','/')))\n",
     "    \n",
-    "    # Crop slices\n",
+    "    # Check image and mask size and get numpy arrays\n",
     "    assert data.GetSize() == mask.GetSize()\n",
     "    data_array = sitk.GetArrayFromImage(data)\n",
     "    mask_array = sitk.GetArrayFromImage(mask)\n",
-    "    \n",
     "    image_size = data_array.shape[2], data_array.shape[1]\n",
     "    \n",
-    "    #print(data_array.shape)\n",
-    "    \n",
+    "    # Chech the labels\n",
     "    assert label in classes\n",
     "    \n",
     "    if use_classes: # Multiples data classes:\n",
@@ -198,13 +196,16 @@
     "    else:           # Single data class:\n",
     "        data_class = 0\n",
     "    \n",
+    "    # For each slice\n",
     "    for idx in range(len(data_array)): #first dimension is z in numpy (z,y,x)\n",
     "        data_slice = data_array[idx, ...]\n",
     "        mask_slice = mask_array[idx, ...]\n",
     "        \n",
+    "        # Use only slices with mask data\n",
     "        if np.sum(mask_slice) == 0:\n",
     "            continue\n",
     "        \n",
+    "        # Normalize to 8-bits\n",
     "        data_slice = normalize_8bits(data_slice)\n",
     "        \n",
     "        # Get contours from the mask\n",
@@ -217,7 +218,7 @@
     "        image_out = os.path.join(output_folder, f\"{image_name}.png\")\n",
     "        cv2.imwrite(image_out, data_slice)\n",
     "    \n",
-    "        # save  label\n",
+    "        # Save  label\n",
     "        label_out = os.path.join(output_folder, f\"{image_name}.txt\")\n",
     "        with open(label_out, \"w\") as fp:\n",
     "            for contour in contours_list:\n",
