Add notebook titles

--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -151,10 +151,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Format YOLOv5/v8\n",
-    "https://docs.ultralytics.com/datasets/segment/\n",
-    "<br> `<class-index> <x1> <y1> <x2> <y2> ... <xn> <yn>`\n",
-    "<br>Others: https://docs.ultralytics.com/yolov5/tutorials/train_custom_data/#13-prepare-dataset-for-yolov5"
+    "### Save 8-bit slices and labels\n",
+    "\n",
+    "Format YOLOv8:\n",
+    "- https://docs.ultralytics.com/datasets/segment/\n",
+    "- `<class-index> <x1> <y1> <x2> <y2> ... <xn> <yn>`\n",
+    "- Others: https://docs.ultralytics.com/yolov5/tutorials/train_custom_data/#13-prepare-dataset-for-yolov5"
    ]
   },
   {
@@ -224,6 +226,14 @@
     "            for contour in contours_list:\n",
     "                contour_str = \" \".join([f\"{point[0]/image_size[0]:0.6f} {point[1]/image_size[1]:0.6f}\" for point in contour])\n",
     "                fp.write(f\"{data_class} {contour_str}\\n\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Train and Val files"
    ]
   },
   {
