created extended_metadata script

--- a/dataset_analysis/challange_data.ipynb
+++ b/dataset_analysis/challange_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "\n",
     "# Libraries\n",
     "import pandas as pd\n",
-    "import SimpleITK\n",
+    "import SimpleITK as sitk\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
     "from torchvision.transforms import (\n",
@@ -62,14 +62,14 @@
    "metadata": {},
    "source": [
     "We prepare the data<br>\n",
-    "1. The first approach is SAMed in 2D, so the 3D slices with lesion are saved as png.\n",
+    "- The first approach for segmentation is SAMed in 2D, so the 3D slices with lesion are saved as png or mha.\n",
     "The idea is to save the 2D with this name: <br>\n",
     "patient_id + slice_number + label + .png <br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,40 @@
     "root_path = repo_path / 'data/challange_2023/Train'\n",
     "\n",
     "# get list of images using metadata\n",
-    "metadata = pd.read_csv(root_path / 'labels.csv')"
+    "metadata = pd.read_csv(root_path / 'labels.csv')\n",
+    "# image files, replace \\\\ with / for windows\n",
+    "metadata['data_path'] = metadata['data_path'].str.replace('\\\\', '/', regex=False)\n",
+    "metadata['mask_path'] = metadata['mask_path'].str.replace('\\\\', '/', regex=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check all images shapes, spacing, etc. <br>\n",
+    "For that, we create an extended metadata file.<br>\n",
+    "-> The extended metadata file is created with the script: extended_metadata.py<br>   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After creating the extended metadata we get the following information:<br>\n",
+    "- All images have the same spacing: [1.0, 1.0, 1.0], origin [0.0, 0.0, 0.0] and direction [[1. 0. 0.] [0. 1. 0.] [0. 0. 1.]].\n",
+    "- The images have 11 different shapes: resizing is an essential step at some point.\n",
+    "- Min and max values per axis (z,y,x): ([330, 546, 843], [354, 682, 865])<br>\n",
+    "\n",
+    "So essentially, the number of z-slides is the same, and the image ratio changes a little bit. <br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the images in their original nrrd format"
    ]
   },
   {
@@ -90,21 +123,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of image: (330, 608, 865)\n",
+      "shape of image: (349, 682, 865)\n",
       "label values: [0 1]\n"
      ]
     }
    ],
    "source": [
     "# get example image\n",
-    "idx = 0\n",
+    "idx = 21\n",
     "row = metadata.iloc[idx]\n",
     "# image files, replace \\\\ with / for windows\n",
     "image_path = root_path /  row['data_path'].replace('\\\\', '/')\n",
     "label_path = root_path / row['mask_path'].replace('\\\\', '/')\n",
     "\n",
-    "im = SimpleITK.GetArrayFromImage(SimpleITK.ReadImage(image_path))\n",
-    "label = SimpleITK.GetArrayFromImage(SimpleITK.ReadImage(label_path))\n",
+    "# read\n",
+    "im = sitk.GetArrayFromImage(sitk.ReadImage(image_path))\n",
+    "label = sitk.GetArrayFromImage(sitk.ReadImage(label_path))\n",
+    "# info\n",
     "print(f'shape of image: {im.shape}')\n",
     "print(f'label values: {np.unique(label)}')"
    ]
@@ -220,8 +255,8 @@
     "image_path = root_path /  row['data_path'].replace('\\\\', '/')\n",
     "label_path = root_path / row['mask_path'].replace('\\\\', '/')\n",
     "# get image and label\n",
-    "im = SimpleITK.GetArrayFromImage(SimpleITK.ReadImage(image_path))\n",
-    "label = SimpleITK.GetArrayFromImage(SimpleITK.ReadImage(label_path))\n",
+    "im = sitk.GetArrayFromImage(sitk.ReadImage(image_path))\n",
+    "label = sitk.GetArrayFromImage(sitk.ReadImage(label_path))\n",
     "\n",
     "#  # z values valid lesion\n",
     "# z_values = np.unique(np.where(label)[0])\n",
@@ -229,9 +264,9 @@
     "#     # saving path\n",
     "#     save_name = f'id_{row[\"case_id\"]}_slice_{z}_label_{row[\"label\"]}.mha'\n",
     "#     # save image\n",
-    "#     SimpleITK.WriteImage(SimpleITK.GetImageFromArray(im[z,:,:]), str(im_dir / save_name))\n",
+    "#     sitk.WriteImage(sitk.GetImageFromArray(im[z,:,:]), str(im_dir / save_name))\n",
     "#     # save label\n",
-    "#     SimpleITK.WriteImage(SimpleITK.GetImageFromArray(label[z,:,:]), str(label_dir / save_name))\n",
+    "#     sitk.WriteImage(sitk.GetImageFromArray(label[z,:,:]), str(label_dir / save_name))\n",
     "    "
    ]
   },
@@ -275,33 +310,13 @@
     "label_files = sorted(list(label_dir.glob('*.mha')))\n",
     "# show\n",
     "idx = 0\n",
-    "label_read = SimpleITK.GetArrayFromImage(SimpleITK.ReadImage(str(label_files[idx])))\n",
-    "im_read = SimpleITK.GetArrayFromImage(SimpleITK.ReadImage(str(im_files[idx])))\n",
+    "label_read = sitk.GetArrayFromImage(sitk.ReadImage(str(label_files[idx])))\n",
+    "im_read = sitk.GetArrayFromImage(sitk.ReadImage(str(im_files[idx])))\n",
     "fig, ax = plt.subplots(1,2, figsize=(10,10))\n",
     "ax[0].imshow(im_read, cmap='gray')\n",
     "ax[0].set_title('image')\n",
     "ax[1].imshow(label_read)\n",
     "ax[1].set_title('label')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3170"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(im_files)"
    ]
   },
   {
