Minor changes, plotting & segmentation submission

--- a/test_yolo.ipynb
+++ b/test_yolo.ipynb
@@ -17,15 +17,23 @@
     "import pandas as pd\n",
     "import SimpleITK as sitk\n",
     "\n",
+    "# this data loader is in a file now\n",
     "class Abus23DataLoader():\n",
-    "    def __init__(self, dataset_path, labels_csv):\n",
+    "    def __init__(self, dataset_path, labels_csv=None):\n",
     "        self.data = self.load_abus23(dataset_path, labels_csv)\n",
     "        self.dataset_path = dataset_path\n",
     "        self.used_data = self.data\n",
     "        self.cidx = 0\n",
     "        \n",
-    "    def load_abus23(self, dataset_path, label_file):\n",
-    "        dataset = pd.read_csv(os.path.join(dataset_path, label_file))\n",
+    "    def load_abus23(self, dataset_path, label_file=None):\n",
+    "        if label_file is not None:\n",
+    "            dataset = pd.read_csv(os.path.join(dataset_path, label_file))\n",
+    "        else:\n",
+    "            files = [f for f in os.listdir(dataset_path) if f.endswith(\".nrrd\")]\n",
+    "            files_id = [int(f.split(\".\")[0].split(\"_\")[-1]) for f in files]\n",
+    "            files_path = [f for f in files] #os.path.join(dataset_path, f) \n",
+    "            dataset_dict = [{\"case_id\": f_id, \"data_path\": f_path} for f_id, f_path in zip(files_id, files_path)]\n",
+    "            dataset = pd.DataFrame.from_dict(dataset_dict)\n",
     "        print(\"Dataset columns:\", dataset.columns)\n",
     "        return dataset\n",
     "    \n",
@@ -97,13 +105,16 @@
     "\n",
     "# Create the volume from slices\n",
     "\n",
-    "def volume_from_slice(slices):\n",
+    "def volume_from_slice(slices, format=None):\n",
     "    mask_3d = np.stack(slices)\n",
     "    output_mask = sitk.GetImageFromArray(mask_3d)\n",
-    "    #castImageFilter = sitk.CastImageFilter()\n",
-    "    #castImageFilter.SetOutputPixelType(sitk.sitkFloat32)\n",
-    "    #img = castImageFilter.Execute(img)\n",
     "    \n",
+    "    if format is not None:\n",
+    "        #sitk.GetPixelIDValueAsString(format)\n",
+    "        castImageFilter = sitk.CastImageFilter()\n",
+    "        castImageFilter.SetOutputPixelType(format)\n",
+    "        output_mask = castImageFilter.Execute(output_mask)\n",
+    "        \n",
     "    return output_mask"
    ]
   },
@@ -177,14 +188,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset columns: Index(['case_id', 'label', 'data_path', 'mask_path'], dtype='object')\n"
+      "Dataset columns: Index(['case_id', 'data_path'], dtype='object')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [05:44<00:00, 17.21s/it]\n"
+      "100%|██████████| 30/30 [08:50<00:00, 17.68s/it]\n"
      ]
     }
    ],
@@ -193,26 +204,31 @@
     "from tqdm import tqdm\n",
     "\n",
     "# ABUS 23\n",
-    "dataset_path = \"datasets/Train\"\n",
-    "label_file = \"labels.csv\"\n",
-    "validation_file = \"datasets/abus23_25_png/val_seg.txt\"\n",
+    "dataset_path = \"datasets/DATA\"\n",
+    "label_file = None #\"labels.csv\"\n",
+    "validation_file = None #\"datasets/abus23_25_png/val_seg.txt\"\n",
     "\n",
     "# Yolo model\n",
     "yolo_weights = \"/home/joel/abus23/runs/segment/train10/weights/best.pt\"\n",
     "\n",
-    "# Output folder\n",
-    "output_folder = os.path.join(\"results_masks\", \"abus23_25\", \"raw_stack_2\")\n",
+    "# Volume\n",
+    "confidance_th = 0.6\n",
     "\n",
+    "# Output folder\n",
+    "output_folder = os.path.join(\"results_masks\", \"abus23_test\", \"raw_stack_train10\")\n",
+    "output_file_template = \"MASK_{:0>3}.nii.gz\"\n",
+    "output_format = sitk.sitkUInt8\n",
     "\n",
     "# Create output folder\n",
-    "os.makedirs(output_folder, exist_ok=True)\n",
+    "os.makedirs(output_folder, exist_ok=False)\n",
     "\n",
     "# Load dataset\n",
     "dataset = Abus23DataLoader(dataset_path, label_file)\n",
     "\n",
     "# Get validation cases\n",
-    "val_ids = get_validation_ids(validation_file)\n",
-    "dataset.set_subset_ids(val_ids)\n",
+    "if validation_file is not None:\n",
+    "        val_ids = get_validation_ids(validation_file)\n",
+    "        dataset.set_subset_ids(val_ids)\n",
     "\n",
     "# Load yolo predictor\n",
     "yolo_predictor = YOLOPredictor(yolo_weights)\n",
@@ -224,25 +240,39 @@
     "    \n",
     "        # Get image slice\n",
     "        image_slices = get_slices(item['image'])\n",
-    "    \n",
+    "\n",
     "        # Get predicted slices\n",
-    "        yolo_masks_slices = [yolo_predictor(slice, conf_th=0.6) for slice in image_slices]\n",
+    "        yolo_masks_slices = [yolo_predictor(slice, conf_th=confidance_th) for slice in image_slices]\n",
     "\n",
     "        # Create 3D volum\n",
-    "        mask_volum = volume_from_slice(yolo_masks_slices)\n",
+    "        mask_volum = volume_from_slice(yolo_masks_slices, output_format)               \n",
     "        \n",
     "        # Copy metadata from predited image\n",
     "        mask_volum.CopyInformation(item['image'])\n",
     "        \n",
     "        # Save NRRD mask prediction\n",
-    "        mask_file = os.path.join(output_folder, f\"{item['id']}.nrrd\")\n",
+    "        mask_file = os.path.join(output_folder, output_file_template.format(item['id']))\n",
     "        sitk.WriteImage(mask_volum, mask_file, useCompression=True )\n",
     "        \n",
     "        # Save file names for evaluation\n",
     "        pred_files.append(mask_file)\n",
-    "        gt_files.append(item['mask_path'])\n",
+    "        if 'mask_path' in item:\n",
+    "                gt_files.append(item['mask_path'])\n",
+    "                \n",
+    "if len(gt_files) > 0:\n",
+    "        with open(os.path.join(output_folder,\"cases.json\"), \"w\") as fp:\n",
+    "                json.dump({\"gt_files\": gt_files,\n",
+    "                        \"pred_files\": pred_files,\n",
+    "                        \"confidance_th\": confidance_th},fp)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -253,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,15 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['results_masks/abus23_25/raw_stack_2/7.nrrd', 'results_masks/abus23_25/raw_stack_2/9.nrrd', 'results_masks/abus23_25/raw_stack_2/10.nrrd', 'results_masks/abus23_25/raw_stack_2/14.nrrd', 'results_masks/abus23_25/raw_stack_2/22.nrrd', 'results_masks/abus23_25/raw_stack_2/25.nrrd', 'results_masks/abus23_25/raw_stack_2/31.nrrd', 'results_masks/abus23_25/raw_stack_2/39.nrrd', 'results_masks/abus23_25/raw_stack_2/53.nrrd', 'results_masks/abus23_25/raw_stack_2/61.nrrd', 'results_masks/abus23_25/raw_stack_2/62.nrrd', 'results_masks/abus23_25/raw_stack_2/66.nrrd', 'results_masks/abus23_25/raw_stack_2/67.nrrd', 'results_masks/abus23_25/raw_stack_2/74.nrrd', 'results_masks/abus23_25/raw_stack_2/75.nrrd', 'results_masks/abus23_25/raw_stack_2/80.nrrd', 'results_masks/abus23_25/raw_stack_2/87.nrrd', 'results_masks/abus23_25/raw_stack_2/89.nrrd', 'results_masks/abus23_25/raw_stack_2/90.nrrd', 'results_masks/abus23_25/raw_stack_2/99.nrrd']\n",
-      "['datasets/Train/MASK/MASK_007.nrrd', 'datasets/Train/MASK/MASK_009.nrrd', 'datasets/Train/MASK/MASK_010.nrrd', 'datasets/Train/MASK/MASK_014.nrrd', 'datasets/Train/MASK/MASK_022.nrrd', 'datasets/Train/MASK/MASK_025.nrrd', 'datasets/Train/MASK/MASK_031.nrrd', 'datasets/Train/MASK/MASK_039.nrrd', 'datasets/Train/MASK/MASK_053.nrrd', 'datasets/Train/MASK/MASK_061.nrrd', 'datasets/Train/MASK/MASK_062.nrrd', 'datasets/Train/MASK/MASK_066.nrrd', 'datasets/Train/MASK/MASK_067.nrrd', 'datasets/Train/MASK/MASK_074.nrrd', 'datasets/Train/MASK/MASK_075.nrrd', 'datasets/Train/MASK/MASK_080.nrrd', 'datasets/Train/MASK/MASK_087.nrrd', 'datasets/Train/MASK/MASK_089.nrrd', 'datasets/Train/MASK/MASK_090.nrrd', 'datasets/Train/MASK/MASK_099.nrrd']\n"
+      "['results_masks/abus23_test/raw_stack_train10/MASK_107.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_109.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_105.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_127.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_116.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_118.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_119.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_115.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_101.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_124.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_128.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_126.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_104.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_108.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_117.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_106.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_129.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_111.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_102.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_100.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_122.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_110.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_123.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_112.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_103.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_114.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_120.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_125.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_113.nii.gz', 'results_masks/abus23_test/raw_stack_train10/MASK_121.nii.gz']\n",
+      "[]\n"
      ]
     }
    ],
@@ -307,54 +337,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Validating.. (Conf: 0.6)\n",
       "Segmentation:\n",
       "------------------------------------------\n",
-      "Case: 7.nrrd   Results: {'DiceCoefficient': 0.4108192408071463, 'HDCoefficient': 293.4177908716511, 'score': -293.00697163084396}\n",
-      "Case: 9.nrrd   Results: {'DiceCoefficient': 0.0, 'HDCoefficient': 230.59488285736091, 'score': -230.59488285736091}\n",
-      "Case: 10.nrrd   Results: {'DiceCoefficient': 0.5383357066362257, 'HDCoefficient': 226.57890457851542, 'score': -226.0405688718792}\n",
-      "Case: 14.nrrd   Results: {'DiceCoefficient': 0.13659776114277866, 'HDCoefficient': 340.74917461382057, 'score': -340.6125768526778}\n",
-      "Case: 22.nrrd   Results: {'DiceCoefficient': 0.5968216750111011, 'HDCoefficient': 57.706152185014034, 'score': -57.109330510002934}\n",
-      "Case: 25.nrrd   Results: {'DiceCoefficient': 0.6108740813545691, 'HDCoefficient': 45.221676218380054, 'score': -44.61080213702549}\n",
-      "Case: 31.nrrd   Results: {'DiceCoefficient': 0, 'HDCoefficient': 0, 'score': 0}\n",
-      "Case: 39.nrrd   Results: {'DiceCoefficient': 0.5201721162144022, 'HDCoefficient': 232.13358223230003, 'score': -231.61341011608562}\n",
-      "Case: 53.nrrd   Results: {'DiceCoefficient': 0.2100306919642857, 'HDCoefficient': 200.90047287151916, 'score': -200.69044217955488}\n",
-      "Case: 61.nrrd   Results: {'DiceCoefficient': 0.2605907619648637, 'HDCoefficient': 309.3121400785944, 'score': -309.0515493166295}\n",
-      "Case: 62.nrrd   Results: {'DiceCoefficient': 0.5090851957617121, 'HDCoefficient': 109.47145746723207, 'score': -108.96237227147036}\n",
-      "Case: 66.nrrd   Results: {'DiceCoefficient': 0.7194820219879716, 'HDCoefficient': 50.00999900019995, 'score': -49.290516978211976}\n",
-      "Case: 67.nrrd   Results: {'DiceCoefficient': 0.3836228621350089, 'HDCoefficient': 150.70500987027606, 'score': -150.32138700814104}\n",
-      "Case: 74.nrrd   Results: {'DiceCoefficient': 0.1378053104190706, 'HDCoefficient': 236.73825208444873, 'score': -236.60044677402965}\n",
-      "Case: 75.nrrd   Results: {'DiceCoefficient': 0.9201153132664924, 'HDCoefficient': 109.07795377618706, 'score': -108.15783846292057}\n",
-      "Case: 80.nrrd   Results: {'DiceCoefficient': 0.5843310426285837, 'HDCoefficient': 305.85944484354246, 'score': -305.27511380091386}\n",
-      "Case: 87.nrrd   Results: {'DiceCoefficient': 0.539117290096585, 'HDCoefficient': 35.4400902933387, 'score': -34.900973003242115}\n",
-      "Case: 89.nrrd   Results: {'DiceCoefficient': 0.8744031935424175, 'HDCoefficient': 20.024984394500787, 'score': -19.15058120095837}\n",
-      "Case: 90.nrrd   Results: {'DiceCoefficient': 0.08434102764909673, 'HDCoefficient': 325.9279061387656, 'score': -325.8435651111165}\n",
-      "Case: 99.nrrd   Results: {'DiceCoefficient': 0.6350133486732451, 'HDCoefficient': 51.82663407939975, 'score': -51.191620730726505}\n",
       "\n",
-      "DiceCoefficient:\n",
-      "   - Min: 0.0000\n",
-      "   - Max: 0.9201\n",
-      "   - Mean: 0.4336\n",
-      "\n",
-      "HDCoefficient:\n",
-      "   - Min: 0.0000\n",
-      "   - Max: 340.7492\n",
-      "   - Mean: 166.5848\n",
-      "\n",
-      "score:\n",
-      "   - Min: -340.6126\n",
-      "   - Max: 0.0000\n",
-      "   - Mean: -166.1512\n"
+      "DiceCoefficient:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "zero-size array to reduction operation minimum which has no identity",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m         confidance_th \u001b[39m=\u001b[39m json_data[\u001b[39m\"\u001b[39m\u001b[39mconfidance_th\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     10\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mValidating.. (Conf: \u001b[39m\u001b[39m{\u001b[39;00mconfidance_th\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m Validate(pred_files, gt_files)\n",
+      "Cell \u001b[0;32mIn[5], line 23\u001b[0m, in \u001b[0;36mValidate\u001b[0;34m(pred_list, gt_list, cvs_pred_file, csv_gt_file)\u001b[0m\n\u001b[1;32m     21\u001b[0m values \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(values)\n\u001b[1;32m     22\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00mk\u001b[39m}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 23\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m   - Min: \u001b[39m\u001b[39m{\u001b[39;00mvalues\u001b[39m.\u001b[39;49mmin()\u001b[39m:\u001b[39;00m\u001b[39m0.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m   - Max: \u001b[39m\u001b[39m{\u001b[39;00mvalues\u001b[39m.\u001b[39mmax()\u001b[39m:\u001b[39;00m\u001b[39m0.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m   - Mean: \u001b[39m\u001b[39m{\u001b[39;00mvalues\u001b[39m.\u001b[39mmean()\u001b[39m:\u001b[39;00m\u001b[39m0.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/abus23/py_env/py310_1/lib/python3.10/site-packages/numpy/core/_methods.py:44\u001b[0m, in \u001b[0;36m_amin\u001b[0;34m(a, axis, out, keepdims, initial, where)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_amin\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m     43\u001b[0m           initial\u001b[39m=\u001b[39m_NoValue, where\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m---> 44\u001b[0m     \u001b[39mreturn\u001b[39;00m umr_minimum(a, axis, \u001b[39mNone\u001b[39;49;00m, out, keepdims, initial, where)\n",
+      "\u001b[0;31mValueError\u001b[0m: zero-size array to reduction operation minimum which has no identity"
      ]
     }
    ],
    "source": [
+    "if \"gt_files\" not in locals() or \"pred_files\" not in locals():\n",
+    "    if not os.path.exists(os.path.join(output_folder,\"cases.json\")):\n",
+    "        print(f\"Data not found in {output_folder}\")\n",
+    "    print(f\"Loading data from {output_folder}..\")\n",
+    "    with open(os.path.join(output_folder,\"cases.json\")) as fp:\n",
+    "        json_data = json.load(fp)\n",
+    "        gt_files, pred_files = json_data[\"gt_files\"], json_data[\"pred_files\"]\n",
+    "        confidance_th = json_data[\"confidance_th\"]\n",
+    "\n",
+    "print(f\"Validating.. (Conf: {confidance_th})\")\n",
     "Validate(pred_files, gt_files)\n"
    ]
   }
