--- a/test_yolo_inf_wcrop.ipynb
+++ b/test_yolo_inf_wcrop.ipynb
@@ -39,7 +39,7 @@
     "        if label_file is not None:\n",
     "            dataset = pd.read_csv(os.path.join(dataset_path, label_file))\n",
     "        else:\n",
-    "            files = [f for f in os.listdir(dataset_path) if f.endswith(\".nrrd\")]\n",
+    "            files = sorted([f for f in os.listdir(dataset_path) if f.endswith(\".nrrd\")])\n",
     "            files_id = [int(f.split(\".\")[0].split(\"_\")[-1]) for f in files]\n",
     "            files_path = [f for f in files] #os.path.join(dataset_path, f) \n",
     "            dataset_dict = [{\"case_id\": f_id, \"data_path\": f_path} for f_id, f_path in zip(files_id, files_path)]\n",
@@ -852,7 +852,7 @@
     "\n",
     "# Volume\n",
     "confidance_th = 0.6\n",
-    "#crop = [0,0,0,0,0,0]\n",
+    "crop = [0,0,0,0,0,0]\n",
     "\n",
     "#crop = [0.03, 0.03, 0, 0.1, 0.03, 0.03]\n",
     "\n",
