probability map and preprocessing running

--- a/experiments/docker/vit_b/play.ipynb
+++ b/experiments/docker/vit_b/play.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,66 +30,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 30/30 [00:39<00:00,  1.31s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Expansion HP\n",
-    "x_expansion = 865\n",
-    "y_expansion = 865\n",
-    "x_resizing = 512\n",
-    "y_resizing = 512\n",
-    "file_format = 'mha'\n",
-    "folder_name = f'full-slice_{x_resizing}x{y_resizing}_all'\n",
-    "data_directory = repo_path / 'data/challange_2023' / 'Test'\n",
-    "data_directory.mkdir(exist_ok=True, parents=True)\n",
-    "\n",
-    "# transforms\n",
-    "preprocess_im = Compose(\n",
-    "        [\n",
-    "            Resize((x_resizing, y_resizing), interpolation= InterpolationMode.BILINEAR),\n",
-    "        ]\n",
-    ")\n",
-    "\n",
-    "# new images and labels\n",
-    "save_dir = data_directory / folder_name\n",
-    "save_dir.mkdir(exist_ok=True)\n",
-    "im_dir = save_dir / f'image_{file_format}'\n",
-    "im_dir.mkdir(exist_ok=True)\n",
-    "\n",
-    "### create metadata\n",
-    "# raw data path\n",
-    "raw_data = repo_path / 'input'\n",
-    "files = [f for f in raw_data.glob('**/*') if f.suffix == '.nrrd']\n",
-    "iter = tqdm(files, total=len(files))\n",
-    "metadata = pd.DataFrame(columns=['case_id', 'data_path', 'shape'])\n",
-    "\n",
-    "for i, im_path in enumerate(iter):\n",
-    "    # get 3D image\n",
-    "    im_sitk = sitk.ReadImage(im_path)\n",
-    "    # store metadata\n",
-    "    metadata.loc[i, 'case_id'] = im_path.stem.split('_')[-1]\n",
-    "    metadata.loc[i, 'data_path'] = 'DATA/'+im_path.name\n",
-    "    metadata.loc[i, 'shape'] = im_sitk.GetSize()\n",
-    "# save metadata\n",
-    "metadata = metadata.sort_values(by=['case_id'])\n",
-    "metadata.to_csv(data_directory / 'metadata.csv', index=False)"
+    "metadata_path = repo_path / 'data/challange_2023/Test/metadata.csv'\n",
+    "metadata = pd.read_csv(metadata_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "105\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "116\n",
+      "117\n",
+      "118\n",
+      "119\n",
+      "120\n",
+      "121\n",
+      "122\n",
+      "123\n",
+      "124\n",
+      "125\n",
+      "126\n",
+      "127\n",
+      "128\n",
+      "129\n"
+     ]
+    }
+   ],
+   "source": [
+    "for case_id in metadata['case_id']:\n",
+    "    print(case_id)"
+   ]
   }
  ],
  "metadata": {
